--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ phone: +39 04241931538
 mobile: +39 3488590927
 skype: massimiliano.zonta
 address:
-  Via tre ponti, 62
+  Via Brigata Granatieri di Sardegna, 11
   <br>
   36061 Bassano del Grappa (VI)
   <br>
@@ -23,7 +23,7 @@ description:  # this means to ignore newlines until "baseurl:"
  Automating user EXperience
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://aexengineering.github.io" # the base hostname & protocol for your site
-twitter_username: 
+twitter_username:
 github_username:  aexengineering
 linkedin_username: aexengineering-di-ing-zonta-massimiliano
 
