--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,12 @@ address:
   36061 Bassano del Grappa (VI)
   <br>
   Italy
+address_work:
+    Largo G. Perlasca, 14
+    <br>
+    36061 Bassano del Grappa (VI)
+    <br>
+    Italy
 description:  # this means to ignore newlines until "baseurl:"
  Automating user EXperience
 baseurl: "" # the subpath of your site, e.g. /blog
