--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: AEX Engineering
 title_short: AEX Eng
 author: Massimiliano Zonta
-email: info(at)aexengineering.com
+email: info(at)aexengineering(dot)com
 phone: +39 04241931538
 mobile: +39 3488590927
 skype: massimiliano.zonta
@@ -30,7 +30,7 @@ description:  # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://aexengineering.github.io" # the base hostname & protocol for your site
 twitter_username:
-github_username: 
+github_username:
 # linkedin_username: aexengineering-di-ing-zonta-massimiliano
 
 # Build settings
